--- a/frontend/nginx/default.conf
+++ b/frontend/nginx/default.conf
@@ -25,3 +25,20 @@ server {
         try_files $uri $uri/ /index.html;
     }
 }
+
+server {
+    listen 4443 ssl;
+    http2 on;
+    server_name 10.41.56.9;
+
+    ssl_certificate /etc/nginx/certs/server.crt;
+    ssl_certificate_key /etc/nginx/certs/private.key;
+
+    location / {
+        proxy_pass http://langfuse-web:3000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+}
